# drusilla-py

./: .env.example  .error_messages  .gitignore  .pre-commit-config.yaml  Makefile  README.md  a  aaa  lunarpunk_story.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml  tests.yml
agent_examples/: cypherpunk_love.py  dissociative_identity.py  summer_chaser.py  world_traveler.py
agents_examples/: cypherpunk_jokes.py  cypherpunk_love.py  dissociative_identity.py  summer_chaser.py  world_traveler.py
docs/: CONTRIBUTING.md  README.md
docs/.internal/: CONTRIBUTING.md  TODO.md
docs/agents/: README.md  agent_cypherpunk_jokes.md  agent_dissociative_identity.md  agent_friend_with_benefits.md  agent_summer_chaser.md  agent_world_traveler.md
docs/agents/examples/: agent_cypherpunk_jokes.md  agent_cypherpunk_storyteller.md  agent_dissociative_identity.md  agent_friend_with_benefits.md  agent_summer_chaser.md  agent_world_traveler.md
docs/development/: README.md  error_messages.md
docs/primitives/: README.md  agents.md  charms.md  context.md  mcp.md  models.md  orbs.md  runners.md  shield.md  shields.md  sword.md  swords.md
docs/primitives/gear/: orbs.md  shield.md  sword.md
examples/agents/: cypherpunk_jokes.py  cypherpunk_love.py  cypherpunk_storyteller.py  dissociative_identity.py  friend_with_benefits.py  summer_chaser.py  world_traveler.py
scripts/: sanity_test.py
src/: __init__.py
src/agents/: __init__.py  agent.py  agent_v1.py  output.py  run.py  run_impl.py
src/gear/: __init__.py  charm.py  charms.py  orbs.py  shield.py  shields.py  sword.py  swords.py
src/models/: chat.py  chat_completions.py  interface.py  provider.py  responses.py  settings.py  shared.py
src/network/: client.py  http.py
src/runners/: config.py  items.py  result.py  run.py  run_impl.py  stream_events.py
src/util/: _client.py  _computer.py  _config.py  _constants.py  _debug.py  _env.py  _exceptions.py  _guardrail.py  _handoffs.py  _http.py  _items.py  _json.py  _lifecycle.py  _logger.py  _pretty_print.py  _print.py  _result.py  _run_context.py  _stream_events.py  _strict_schema.py  _tool.py  _types.py  _usage.py  _version.py  constants.py  exceptions.py  print.py  schema.py  types.py
tests/agents/: test_agent.py  test_agentV1.py  test_output.py  test_run.py  test_run_impl.py
tests/gear/: test_charm.py  test_charms.py  test_orbs.py  test_shield.py  test_sword.py
tests/models/: test_chat.py  test_interface.py  test_provider.py  test_responses.py  test_settings.py  test_shared.py
tests/network/: test_client.py  test_http.py
tests/runners/: test_items.py  test_result.py  test_run.py  test_run_impl.py  test_stream_events.py
tests/util/: test_client.py  test_constants.py  test_exceptions.py  test_http.py  test_items.py  test_print.py  test_result.py  test_schema.py  test_stream_events.py  test_strict_schema.py  test_types.py
